Fixed photo description text alignment.

--- a/sdm-website/styles/PhotosDisplay.module.css
+++ b/sdm-website/styles/PhotosDisplay.module.css
@@ -34,6 +34,7 @@
     .photo_display__description {
         width: 80%;
         margin: 0 0 25px 0;
+        text-align: initial;
     }
 
     .photo_display__image_wrapper {
